crates/wac-parser/tests/resolution/fail/mismatched-variant-case-name.wac
import x: interface {
    variant v {
        a,
        c(u16),
        b(tuple<string, u16>),
    }
};

let i = new foo:bar { x };
